--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "test": "test"
   },
   "dependencies": {
-    "chai": "^3.5.0"
+    "assert": "^1.4.1",
+    "chai": "^3.5.0",
+    "lodash": "^4.17.2",
+    "moment": "^2.16.0",
+    "request": "^2.78.0",
+    "request-promise": "^4.1.1"
   },
   "devDependencies": {
     "mocha": "^3.1.2"
@@ -25,7 +30,7 @@
     "phrases"
   ],
   "author": "arc6373",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/arc6373/commonphrases/issues"
   },
