--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "commonphrases",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "This library is used to find common phrases used in a string or from an array of strings",
   "main": "index.js",
   "directories": {
@@ -10,10 +10,7 @@
   "dependencies": {
     "assert": "^1.4.1",
     "chai": "^3.5.0",
-    "lodash": "^4.17.2",
-    "moment": "^2.16.0",
-    "request": "^2.78.0",
-    "request-promise": "^4.1.1"
+    "lodash": "^4.17.2"
   },
   "devDependencies": {
     "mocha": "^3.1.2"
